--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ var states = map.queryRenderedFeatures(e.point, {
       }
       document.getElementById('pd').innerHTML = '<p>We estimate that on a TPP basis in '+states[0].properties.div_nm+ ':</p><h3><strong><b>'+  votes + '% </b></strong> <i style="font-weight:50">of ' + states[0].properties.n_votes + '</i></h3><h4>votes in this area of '+ states[0].properties.SA2 + ' were for'+parties+'</h4>';
   } else {
-    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people</p>';
+    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people!</p>';
   }
 })}
 if (layerId=="ck317ae4d0hjn1cmc1fljngu3"){
@@ -213,7 +213,7 @@ var states = map.queryRenderedFeatures(e0.point, {
   if (states.length > 0 && parseInt(states[0].properties.n_votes)>0) {
       document.getElementById('pd').innerHTML = '<p>We estimate that in '+states[0].properties.div_nm+ ':</p><h3><strong><b>'+  states[0].properties.ALP + '% </b></strong> <i style="font-weight:50">of ' + states[0].properties.n_votes + '</i></h3><h4>votes in this area of '+ states[0].properties.SA2 + ' were for Labor</h4>';
   } else {
-    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people</p>';
+    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people!</p>';
   }
 })}
 if (layerId=="ck3178d2w0bs91cpp8i2uoigg"){
@@ -225,7 +225,7 @@ var states = map.queryRenderedFeatures(e1.point, {
   if (states.length > 0 && parseInt(states[0].properties.n_votes)>0) {
       document.getElementById('pd').innerHTML = '<p>We estimate that in '+states[0].properties.div_nm+ ':</p><h3><strong><b>'+  states[0].properties.LNP + '% </b></strong> <i style="font-weight:50">of ' + states[0].properties.n_votes + '</i></h3><h4>votes in this area of '+ states[0].properties.SA2 + ' were for the Coalition</h4>';
   } else {
-    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people</p>';
+    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people!</p>';
   }
 })}
 if (layerId=="ck317iz4m0hrq1cmc8jd5zl9x"){    
@@ -237,7 +237,7 @@ var states = map.queryRenderedFeatures(e2.point, {
   if (states.length > 0 && parseInt(states[0].properties.n_votes)>0) {
       document.getElementById('pd').innerHTML = '<p>We estimate that in '+states[0].properties.div_nm+ ':</p><h3><strong><b>'+  states[0].properties.GRN + '% </b></strong> <i style="font-weight:50">of ' + states[0].properties.n_votes + '</i></h3><h4>votes in this area of '+ states[0].properties.SA2 + ' were for the Greens</h4>';
   } else {
-    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people</p>';
+    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people!</p>';
   }
 })
 }
@@ -250,7 +250,7 @@ var states = map.queryRenderedFeatures(e3.point, {
   if (states.length > 0 && parseInt(states[0].properties.n_votes)>0) {
       document.getElementById('pd').innerHTML = '<p>We estimate that in '+states[0].properties.div_nm+ ':</p><h2><strong>'+ states[0].properties.UAPP + '% </strong></h2><h3><strong> of ' + states[0].properties.n_votes + '</strong> primary votes cast in this area of '+ states[0].properties.SA2 + ' in favour of the UAP</h3>';
   } else {
-    document.getElementById('pd').innerHTML = '<p>Hover somewhere with peoplef</p>';
+    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people!</p>';
   }
 })       
 }
@@ -263,7 +263,7 @@ var states = map.queryRenderedFeatures(e4.point, {
   if (states.length > 0 && parseInt(states[0].properties.n_votes)>0) {
       document.getElementById('pd').innerHTML = '<p>We estimate that in '+states[0].properties.div_nm+ ':</p><h3><strong><b>'+ votes + '% </b></strong> <i style="font-weight:50">of ' + states[0].properties.n_votes + '</i></h3><h4>votes in this area of '+ states[0].properties.SA2 + ' were for Other candidates</h4>';
   } else {
-    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people</p>';
+    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people!</p>';
   }
 })   }
 if(layerId=="ck317gewz1o2s1cqi2p62ll8x"){
@@ -275,7 +275,7 @@ var states = map.queryRenderedFeatures(e9.point, {
   if (states.length > 0 && parseInt(states[0].properties.n_votes)>0) {
       document.getElementById('pd').innerHTML = '<p>We estimate that in '+states[0].properties.div_nm+ ':</p><h2><strong>'+ states[0].properties.ON + '% </strong></h2><h3><strong> of ' + states[0].properties.n_votes + '</strong> primary votes cast in this area of '+ states[0].properties.SA2 + ' in favour of One Nation</h3>';
   } else {
-    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people</p>';
+    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people!</p>';
   }
 })
 }
@@ -311,7 +311,7 @@ var states = map.queryRenderedFeatures(e.point, {
       }
       document.getElementById('pd').innerHTML = '<p>We estimate that on a TPP basis in '+states[0].properties.div_nm+ ':</p><h3><strong><b>'+  votes + '% </b></strong> <i style="font-weight:50">of ' + states[0].properties.n_votes + '</i></h3><h4>votes in this area of '+ states[0].properties.SA2 + ' were for'+parties+'</h4>';
   } else {
-    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people</p>';
+    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people!</p>';
   }
 })
 
