--- a/index.html
+++ b/index.html
@@ -96,12 +96,13 @@ var imagesArray = [
     "bg5.png",
     "bg6.png",
     "bg7.png",
-    "bg8.png"
+    "bg8.png",
+    "bg9.png"
     
 ];
 
 function changeBackground(){
-    $("#top").css("background-image" , "url("+ imagesArray[parseInt(Math.random()*8)] +")");      
+    $("#top").css("background-image" , "url("+ imagesArray[parseInt(Math.random()*9)] +")");      
 }
 
 
