cool sideways maps

--- a/index.html
+++ b/index.html
@@ -97,12 +97,17 @@ var imagesArray = [
     "bg6.png",
     "bg7.png",
     "bg8.png",
-    "bg9.png"
+    "bg9.png",
+    "bg10.png",
+    "bg11.png",
+    "bg12.png",
+    "bg13.png",
+    "bg14.png"
     
 ];
 
 function changeBackground(){
-    $("#top").css("background-image" , "url("+ imagesArray[parseInt(Math.random()*9)] +")");      
+    $("#top").css("background-image" , "url("+ imagesArray[parseInt(Math.random()*14)] +")");      
 }
 
 
