--- a/index.html
+++ b/index.html
@@ -102,16 +102,17 @@ var imagesArray = [
     "bg11.png",
     "bg12.png",
     "bg13.png",
-    "bg14.png"
-    
+    "bg14.png",
+    "bg15.png",
+    "bg16.png"
 ];
 
 function changeBackground(){
-    $("#top").css("background-image" , "url("+ imagesArray[parseInt(Math.random()*14)] +")");      
+    $("#top").css("background-image" , "url("+ imagesArray[parseInt(Math.random()*16)] +")");      
 }
 
 
-setInterval(changeBackground, 5000);;
+setInterval(changeBackground, =4000);;
 </script>
    
 </head>
