--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@ var imagesArray = [
 
 function changeBackground(){
     $("#top").css("background-image" , "url("+ imagesArray[parseInt(Math.random()*16)] +")");      
-}
+};
 
 
-setInterval(changeBackground, =4000);;
+setInterval(changeBackground, =4000);
 </script>
    
 </head>
