--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ function changeBackground(){
 };
 
 
-setInterval(changeBackground, =4000);
+setInterval(changeBackground, 4000);
 </script>
    
 </head>
