--- a/index.html
+++ b/index.html
@@ -177,12 +177,13 @@ setInterval(changeBackground, 4000);
             
             
 });
+map.addControl(new mapboxgl.FullscreenControl(),'bottom-right');        
 map.addControl(new mapboxgl.GeolocateControl({
 positionOptions: {
 enableHighAccuracy: false
 },
 trackUserLocation: true
-}));
+}),'top-right');
 map.addControl(new MapboxGeocoder({
 accessToken: mapboxgl.accessToken,
 mapboxgl: mapboxgl
