--- a/index.html
+++ b/index.html
@@ -199,17 +199,18 @@ setInterval(changeBackground, 4000);
 });
       
 
-map.addControl(new MapboxGeocoder({
-accessToken: mapboxgl.accessToken,
-mapboxgl: mapboxgl
-}));
+
 map.addControl(new mapboxgl.GeolocateControl({
 positionOptions: {
 enableHighAccuracy: false
 },
 trackUserLocation: true
 }));
-map.addControl(new mapboxgl.FullscreenControl(),'bottom-right');  
+map.addControl(new mapboxgl.FullscreenControl());
+map.addControl(new MapboxGeocoder({
+accessToken: mapboxgl.accessToken,
+mapboxgl: mapboxgl
+}),'bottom-right');  
 var layerList = document.getElementById('menu');
 var inputs = layerList.getElementsByTagName('input');
  
