--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ margin: 2%;
 margin-left: 25%;
 }
 
-.mapboxgl-ctrl-bottom-right{margin-bottom: -2.5%}
+.mapboxgl-ctrl-bottom-right{margin-bottom: -29px}
     </style>
     <style>
 .map-overlay {
