--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ width:50%;
 margin: 2%;
 margin-left: 25%;
 }
-
+.mapboxgl-ctrl-geocoder { min-width:100%; }
 .mapboxgl-ctrl-bottom-right{margin-bottom: -29px}
     </style>
     <style>
