hide 2nd search on mobile?

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ setInterval(changeBackground, 4000);
     <script type="text/javascript"> 
     var mobile = (/iphone|ipod|android|blackberry|mini|windows\sce|palm/i.test(navigator.userAgent.toLowerCase()));  
     if (mobile) { 
-        $('.mapboxgl-ctrl-geocoder').css('display', 'none'); // OR you can use $('.navWrap').hide();
+        $('.mapboxgl-ctrl-bottom-left').css('display', 'none'); // OR you can use $('.navWrap').hide();
     } 
 </script> 
 </head>
