--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ var states = map.queryRenderedFeatures(e.point, {
     <br>
     <h4>The maps are searchable, and information about each area will display when hovered over. Furthermore, as colours get darker it represents a greater amount of votes for that party (<i>Note</i>: these scales aren't uniform as the maximum One Nation vote, for instance, is smaller than the largest Labor vote share)</h4>
     <br>
-    <h4>Each area represents a <i>Statistical Area 1 (SA1)</i> which represent somewhere between 100-1000 people (<i>not voters!</i>), the larger outlined areas represent electoral divisions.</h4>
+    <h4>Each area represents a <i>Statistical Area 1 (SA1)</i> which represent somewhere between 100-1000 people (<i>not voters</i>), the larger outlined areas represent electoral divisions.</h4>
     </div>
     
     <footer>
