--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@ var imagesArray = [
     "bg13.png",
     "bg14.png",
     "bg15.png",
-    "bg16.png"
+    "bg16.png",
+    "bg17.png"
 ];
 
 function changeBackground(){
