new informal map header img

--- a/index.html
+++ b/index.html
@@ -102,11 +102,12 @@ var imagesArray = [
     "bg14.png",
     "bg15.png",
     "bg16.png",
-    "bg17.png"
+    "bg17.png",
+    "bg18.png"
 ];
 
 function changeBackground(){
-    $("#top").css("background-image" , "url("+ imagesArray[parseInt(Math.random()*17)] +")");      
+    $("#top").css("background-image" , "url("+ imagesArray[parseInt(Math.random()*18)] +")");      
 };
 
 
