--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@ gtag('set', {'user_id': 'USER_ID'}); // Set the user ID using signed-in user_id.
 .geocoder {
 
 z-index:2;
-width:50%;
+width:40%;
 margin: 2%;
-margin-left: 25%;
+margin-left:30%;
 }
-.mapboxgl-ctrl-geocoder { min-width:100%; }
+	mapboxgl-ctrl-geocoder mapboxgl-ctrl {height: 20%}
+.mapboxgl-ctrl-geocoder { min-width:100%;min-height: 100% }
 .mapboxgl-ctrl-bottom-left{margin-bottom: -28px}
     </style>
     <style>
@@ -61,7 +62,7 @@ margin-left: 25%;
   position: absolute;
   top: 100%;
   left: 5%;
-  background: rgba(255, 255, 255, 0.8);
+  background: rgba(255, 255, 255, .9);
   margin-right: 20px;
   border-radius: 3px;
     line-height: 0em;
