--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ gtag('set', {'user_id': 'USER_ID'}); // Set the user ID using signed-in user_id.
     
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>    <meta http-equiv="X-UA-Compatible" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="2019 Australian Election"> 
+    <meta name="keywords" content="2019 Australian Election, Australian Election Results,Australian Election Map,Election Map,Election Results Map, How did we vote, 2019 election results,Scott Morrision Election, 2019 election resuts, 2019 australian election map, 2019 Australian Federal Election"> 
     <meta name="title" content="How did we vote? - A detailed breakdown of Australia's election">
     <meta name="description" content="An Incredily detailed series of maps detialing how australia voted, see how your community voted">
     <meta name="author" content= "Jack Larkin">
