--- a/index.html
+++ b/index.html
@@ -104,7 +104,11 @@ var imagesArray = [
     "bg15.png",
     "bg16.png",
     "bg17.png",
-    "bg18.png"
+    "bg18.png",
+    "bg19.png",
+    "bg20.png",
+    "bg21.png",
+    "bg22.png"
 ];
 
 function changeBackground(){
