--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ var states = map.queryRenderedFeatures(e66.point, {
       }
       document.getElementById('pd').innerHTML = '<p>We estimate that on a TCP basis in '+states[0].properties.div_nm+ ':</p><h3><strong><b>'+  votes + '% </b></strong> <i style="font-weight:50">of ' + states[0].properties.n_votes + '</i></h3><h4>votes in this area of '+ states[0].properties.SA2 + ' were for '+winner+' against '+loser+'</h4>';
   } else {
-    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people!</p>';
+    document.getElementById('pd').innerHTML = '<p>Hover (or tap) somewhere with people!</p>';
   }
 })}
     if (layerId=='ck316rp6m0pw01cpe0di7yp2d'){
@@ -357,7 +357,7 @@ var states = map.queryRenderedFeatures(e12.point, {
       }
       document.getElementById('pd').innerHTML = '<p>We estimate that on a TPP basis in '+states[0].properties.div_nm+ ':</p><h3><strong><b>'+  votes + '% </b></strong> <i style="font-weight:50">of ' + states[0].properties.n_votes + '</i></h3><h4>votes in this area of '+ states[0].properties.SA2 + ' were for'+parties+'</h4>';
   } else {
-    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people!</p>';
+    document.getElementById('pd').innerHTML = '<p>Hover (or tap) somewhere with people!</p>';
   }
 })}
 
@@ -376,7 +376,7 @@ var states = map.queryRenderedFeatures(e11.point, {
       }
       document.getElementById('pd').innerHTML = '<p>We estimate that on a TPP basis in '+states[0].properties.div_nm+ ':</p><h3><strong><b>'+  votes + '% </b></strong> <i style="font-weight:50">of ' + states[0].properties.n_votes + '</i></h3><h4>votes in this area of '+ states[0].properties.SA2 + ' swung towards'+parties+'</h4>';
   } else {
-    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people!</p>';
+    document.getElementById('pd').innerHTML = '<p>Hover (or tap) somewhere with people!</p>';
   }
 })}
 if (layerId=="ck317ae4d0hjn1cmc1fljngu3"){
@@ -388,7 +388,7 @@ var states = map.queryRenderedFeatures(e0.point, {
   if (states.length > 0 && parseInt(states[0].properties.n_votes)>0) {
       document.getElementById('pd').innerHTML = '<p>We estimate that in '+states[0].properties.div_nm+ ':</p><h3><strong><b>'+  states[0].properties.ALP + '% </b></strong> <i style="font-weight:50">of ' + states[0].properties.n_votes + '</i></h3><h4>votes in this area of '+ states[0].properties.SA2 + ' were for Labor</h4>';
   } else {
-    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people!</p>';
+    document.getElementById('pd').innerHTML = '<p>Hover (or tap) somewhere with people!</p>';
   }
 })}
 if (layerId=="ck3178d2w0bs91cpp8i2uoigg"){
@@ -400,7 +400,7 @@ var states = map.queryRenderedFeatures(e1.point, {
   if (states.length > 0 && parseInt(states[0].properties.n_votes)>0) {
       document.getElementById('pd').innerHTML = '<p>We estimate that in '+states[0].properties.div_nm+ ':</p><h3><strong><b>'+  states[0].properties.LNP + '% </b></strong> <i style="font-weight:50">of ' + states[0].properties.n_votes + '</i></h3><h4>votes in this area of '+ states[0].properties.SA2 + ' were for the Coalition</h4>';
   } else {
-    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people!</p>';
+    document.getElementById('pd').innerHTML = '<p>Hover (or tap) somewhere with people!</p>';
   }
 })}
 if (layerId=="ck317iz4m0hrq1cmc8jd5zl9x"){    
@@ -412,7 +412,7 @@ var states = map.queryRenderedFeatures(e2.point, {
   if (states.length > 0 && parseInt(states[0].properties.n_votes)>0) {
       document.getElementById('pd').innerHTML = '<p>We estimate that in '+states[0].properties.div_nm+ ':</p><h3><strong><b>'+  states[0].properties.GRN + '% </b></strong> <i style="font-weight:50">of ' + states[0].properties.n_votes + '</i></h3><h4>votes in this area of '+ states[0].properties.SA2 + ' were for the Greens</h4>';
   } else {
-    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people!</p>';
+    document.getElementById('pd').innerHTML = '<p>Hover (or tap) somewhere with people!</p>';
   }
 })
 }
@@ -425,7 +425,7 @@ var states = map.queryRenderedFeatures(e3.point, {
   if (states.length > 0 && parseInt(states[0].properties.n_votes)>0) {
       document.getElementById('pd').innerHTML = document.getElementById('pd').innerHTML = '<p>We estimate that in '+states[0].properties.div_nm+ ':</p><h3><strong><b>'+  states[0].properties.UAPP + '% </b></strong> <i style="font-weight:50">of ' + states[0].properties.n_votes + '</i></h3><h4>votes in this area of '+ states[0].properties.SA2 + ' were for the UAP</h4>';
   } else {
-    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people!</p>';
+    document.getElementById('pd').innerHTML = '<p>Hover (or tap) somewhere with people!</p>';
   }
 })       
 }
@@ -438,7 +438,7 @@ var states = map.queryRenderedFeatures(e4.point, {
   if (states.length > 0 && parseInt(states[0].properties.n_votes)>0) {
       document.getElementById('pd').innerHTML = '<p>We estimate that in '+states[0].properties.div_nm+ ':</p><h3><strong><b>'+ votes + '% </b></strong> <i style="font-weight:50">of ' + states[0].properties.n_votes + '</i></h3><h4>votes in this area of '+ states[0].properties.SA2 + ' were for Other candidates</h4>';
   } else {
-    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people!</p>';
+    document.getElementById('pd').innerHTML = '<p>Hover (or tap) somewhere with people!</p>';
   }
 })   }
 if(layerId=="ck317gewz1o2s1cqi2p62ll8x"){
@@ -450,7 +450,7 @@ var states = map.queryRenderedFeatures(e9.point, {
   if (states.length > 0 && parseInt(states[0].properties.n_votes)>0) {
       document.getElementById('pd').innerHTML = '<p>We estimate that in '+states[0].properties.div_nm+ ':</p><h3><strong><b>'+  states[0].properties.ON + '% </b></strong> <i style="font-weight:50">of ' + states[0].properties.n_votes + '</i></h3><h4>votes in this area of '+ states[0].properties.SA2 + ' were for One Nation</h4>';
   } else {
-    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people!</p>';
+    document.getElementById('pd').innerHTML = '<p>Hover (or tap) somewhere with people!</p>';
   }
 })
 }
@@ -463,7 +463,7 @@ var states = map.queryRenderedFeatures(e22.point, {
   if (states.length > 0 && parseInt(states[0].properties.n_votes)>0) {
       document.getElementById('pd').innerHTML = '<p>We estimate that in '+states[0].properties.div_nm+ ':</p><h3><strong><b>'+  states[0].properties.Informal + '% </b></strong> <i style="font-weight:50">of ' + states[0].properties.n_votes + '</i></h3><h4>votes in this area of '+ states[0].properties.SA2 + ' were Informal</h4>';
   } else {
-    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people!</p>';
+    document.getElementById('pd').innerHTML = '<p>Hover (or tap) somewhere with people!</p>';
   }
 })
 }
@@ -500,7 +500,7 @@ var states = map.queryRenderedFeatures(e.point, {
       }
       document.getElementById('pd').innerHTML = '<p>We estimate that on a TPP basis in '+states[0].properties.div_nm+ ':</p><h3><strong><b>'+  votes + '% </b></strong> <i style="font-weight:50">of ' + states[0].properties.n_votes + '</i></h3><h4>votes in this area of '+ states[0].properties.SA2 + ' were for'+parties+'</h4>';
   } else {
-    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people!</p>';
+    document.getElementById('pd').innerHTML = '<p>Hover (or tap) somewhere with people!</p>';
   }
 })
 
