--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ setInterval(changeBackground, 4000);
     </nav>
     <div class="header" id="top">
         <div class="text-vertical-center">
-            <h1>How did <div id='geocoder' class='geocoder'></div> Vote</h1>   
+            <h1>How did <div id='geocoder' class='geocoder'></div> Vote?</h1>   
             <a href="#map2323" class= "btn btn-dark btn-lg"><b>Start</b></a>
     </div></div>
     <div id='menu2' style="margin-left: 5%;margin-right: 5%;margin-top: 3%;margin-bottom: -3%">
