--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@ setInterval(changeBackground, 4000);
         $('#map2323').css('width', '98%');// OR you can use $('.navWrap').hide();
         $('#over').css('left', '1%');
         $('.geocoder').css('width', '50%');
+         $('.geocoder').css('margin-left', '25%');
         $('#menu2').css('margin-left','1%')
         $('#menu2').css('margin-right','1%')
     } 
