--- a/index.html
+++ b/index.html
@@ -128,10 +128,12 @@ setInterval(changeBackground, 4000);
         $('#map2323').css('margin', '1%');
         $('#map2323').css('width', '98%');// OR you can use $('.navWrap').hide();
         $('#over').css('left', '1%');
+        $('#over').css('width', '98%');
         $('.geocoder').css('width', '50%');
          $('.geocoder').css('margin-left', '25%');
         $('#menu2').css('margin-left','1%')
         $('#menu2').css('margin-right','1%')
+        
     } 
       else{
           $('#over').css('left', '5%');
