--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@ margin-left:30%;
 	mapboxgl-ctrl-geocoder mapboxgl-ctrl {height: 20%}
 .mapboxgl-ctrl-geocoder { min-width:100%;min-height: 100% }
 .mapboxgl-ctrl-bottom-left{margin-bottom: -28px}
+    .mapboxgl-ctrl-top-right{z-index: 11}
     </style>
     <style>
 .map-overlay {
   position: absolute;
-  
+  z-index: 3;
   background: rgba(255, 255, 255, .9);
-    z-index: 100000
 }
     
 </style>
