--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@ setInterval(changeBackground, 4000);
     } 
       else{
           $('#over').css('left', '5%');
-           $('#over').css('top', info*1.08);
+           $('#over').css('top', info*1.09);
+           $('#over').css('padding-right', '.5%');
+           $('#over').css('border-radius', '3%');
   
 
       }
@@ -159,7 +161,7 @@ $(window).on('resize', function(){
         
     } 
       else{
-         $('#over').css('top', info*1.08);
+         $('#over').css('top', info*1.09);
      
 
       } 
