--- a/index.html
+++ b/index.html
@@ -180,7 +180,9 @@ $(window).on('resize', function(){
                 <a href="#top" onclick=$("#menu-close").click();>How did we vote?</a>
             </li>
             <li>
-                <a href="#top" onclick=$("#menu-close").click();>Home</a>
+                <a href="#top" onclick=$("#menu-close").click();>2022</a>
+            </li>
+                <a href="2019.html" onclick=$("#menu-close").click();>2019</a>
             </li>
             <li>
                 <a href="#map2323" onclick=$("#menu-close").click();>Map</a>
