--- a/2019.html
+++ b/2019.html
@@ -180,7 +180,7 @@ $(window).on('resize', function(){
                 <a href="#top" onclick=$("#menu-close").click();>How did we vote?</a>
             </li>
             <li>
-                <a href="2022.html" onclick=$("#menu-close").click();>2022</a>
+                <a href="index.html" onclick=$("#menu-close").click();>2022</a>
             </li>
             <li>
                 <b><a href="#top" onclick=$("#menu-close").click();>2019</a></b>
