voice results added

--- a/2019.html
+++ b/2019.html
@@ -183,6 +183,9 @@ $(window).on('resize', function(){
                 <a href="index.html" onclick=$("#menu-close").click();>2022</a>
             </li>
             <li>
+                <b><a href="Voice.html" onclick=$("#menu-close").click();>Voice Referendum</a></b>
+            </li>
+            <li>
                 <b><a href="#top" onclick=$("#menu-close").click();>2019</a></b>
             </li>
             <li>
