--- a/index.html
+++ b/index.html
@@ -183,6 +183,9 @@ $(window).on('resize', function(){
                 <b><a href="#top" onclick=$("#menu-close").click();>2022</a></b>
             </li>
             <li>
+                <b><a href="Voice.html" onclick=$("#menu-close").click();>Voice Referendum</a></b>
+            </li>
+            <li>
                 <a href="2019.html" onclick=$("#menu-close").click();>2019</a>
             </li>
             <li>
