--- a/Voice.html
+++ b/Voice.html
@@ -217,7 +217,7 @@ $(window).on('resize', function(){
     
 
        <script>
-    mapboxgl.accessToken = "pk.eyJ1IjoiamFja2dvcmRvbmxhcmtpbiIsImEiOiJjazMwbm4wbHMwMGFtM2lvZmUzazAyNjJxIn0.xU9xP1vsV4HrdIHDvvcrAg";
+    mapboxgl.accessToken = "pk.eyJ1IjoiamFja2dvcmRvbmxhcmtpbiIsImEiOiJjbHozdzlmZncxdWFpMmlwbmk3aDRsNWxrIn0.p7SSzawZqexRgsBLHb2amA";
 
     var map = new mapboxgl.Map({
         container: 'map2323', // container id
