--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ $(window).on('resize', function(){
     
 
        <script>
-        mapboxgl.accessToken = "pk.eyJ1IjoiamFja2dvcmRvbmxhcmtpbiIsImEiOiJjazMwbm4wbHMwMGFtM2lvZmUzazAyNjJxIn0.xU9xP1vsV4HrdIHDvvcrAg"
+        mapboxgl.accessToken = "pk.eyJ1IjoiamFja2dvcmRvbmxhcmtpbiIsImEiOiJjbHozdzlmZncxdWFpMmlwbmk3aDRsNWxrIn0.p7SSzawZqexRgsBLHb2amA"
     </script>
     <script>
         var map = new mapboxgl.Map({
