--- a/Voice.html
+++ b/Voice.html
@@ -22,7 +22,7 @@ gtag('set', {'user_id': 'USER_ID'}); // Set the user ID using signed-in user_id.
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>    <meta http-equiv="X-UA-Compatible" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="Voice Referendum Results"> 
-    <meta name="title" content="How did we vote? - A detailed breakdown of Australia's electiona">
+    <meta name="title" content="How did we vote? - A detailed breakdown of Votes in Australia's Voice Referendum">
     <meta name="description" content="An Incredily detailed series of maps detialing how australia voted, see how your community voted">
     <meta name="author" content= "Jack Larkin">
     <meta name="og:title" content="How did we vote? - A detailed breakdown of Australian Federal Elections">
