--- a/Voice.html
+++ b/Voice.html
@@ -25,7 +25,7 @@ gtag('set', {'user_id': 'USER_ID'}); // Set the user ID using signed-in user_id.
     <meta name="title" content="How did we vote? - A detailed breakdown of Votes in Australia's Voice Referendum">
     <meta name="description" content="An Incredily detailed series of maps detialing how australia voted, see how your community voted">
     <meta name="author" content= "Jack Larkin">
-    <meta name="og:title" content="How did we vote? - A detailed breakdown of Australian Federal Elections">
+    <meta name="og:title" content="How did we vote? - A detailed breakdown of Australian Federal Elections/Referenda">
     <meta name="og:description" content="An Incredily detailed series of maps detialing how australia voted, see how your community voted">
     <title>How did we vote?</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
