--- a/Voice.html
+++ b/Voice.html
@@ -186,7 +186,7 @@ $(window).on('resize', function(){
                 <b><a href="#top" onclick=$("#menu-close").click();>Voice Referendum</a></b>
             </li>
             <li>
-                <b><a href="2019.html" onclick=$("#menu-close").click();>2019</a></b>
+                <a href="2019.html" onclick=$("#menu-close").click();>2019</a>
             </li>
             <li>
                 <a href="#map2323" onclick=$("#menu-close").click();>Map</a>
